@@ -67,7 +67,7 @@ if (!hasProperty('mainClass')) {
 mainClassName = 'tf.ownnote.ui.main.OwnNoteEditorManager'
 def appName='OwnNoteEditor'
 group='tf.OwnNoteEditor'
-version='5.2'
+version='6.0'
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
@@ -84,7 +84,7 @@ dependencies {
     compile "org.openjfx:javafx-media:$javafx_version:$platform"
     
     // TFE, 20200809: use our own helper library
-    compile 'tf.JavaHelper:JavaHelper:1.12'
+    compile 'tf.JavaHelper:JavaHelper:1.13'
 
     compile 'org.slf4j:slf4j-api:1.7.12'
     compile 'commons-cli:commons-cli:1.4'
@@ -98,6 +98,7 @@ dependencies {
     
     // new look & feel for old code :-)
     compile group: 'org.jfxtras', name: 'jmetro', version: '11.6.14'
+    compile 'de.jensd:fontawesomefx:8.9'
 
     testCompile "org.testfx:testfx-junit:4.0.+"
     testCompile "org.testfx:testfx-core:4.0.+"
@@ -146,6 +147,7 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 // https://github.com/x-stream/xstream/issues/101#issuecomment-667734663
                 '--add-opens', 'java.base/java.util=ALL-UNNAMED',
                 '--add-opens', 'javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
+                '--add-opens', 'javafx.graphics/javafx.scene.layout=ALL-UNNAMED',
     ]
     
 // extend Netbeans Gradle "Run" task
